tests/baselines/reference/commonTypeIntersection.errors.txt
tests/cases/conformance/types/intersection/commonTypeIntersection.ts(2,5): error TS2326: Types of property '__typename' are incompatible.
  Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
    Type '"TypeTwo"' is not assignable to type '"TypeOne" | undefined'.
tests/cases/conformance/types/intersection/commonTypeIntersection.ts(4,5): error TS2326: Types of property '__typename' are incompatible.
  Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
    Type '"TypeTwo"' is not assignable to type '"TypeOne" | undefined'.


==== tests/cases/conformance/types/intersection/commonTypeIntersection.ts (2 errors) ====
    declare let x1: { __typename?: 'TypeTwo' } & { a: boolean };
    let y1: { __typename?: 'TypeOne' } & { a: boolean} = x1;  // No error!
        ~~
!!! error TS2326: Types of property '__typename' are incompatible.
!!! error TS2326:   Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
!!! error TS2326:     Type '"TypeTwo"' is not assignable to type '"TypeOne" | undefined'.
    declare let x2: { __typename?: 'TypeTwo' } & string;
    let y2: { __typename?: 'TypeOne' } & string = x2;  // No error!
        ~~
!!! error TS2326: Types of property '__typename' are incompatible.
!!! error TS2326:   Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
!!! error TS2326:     Type '"TypeTwo"' is not assignable to type '"TypeOne" | undefined'.
    